--- a/css/style.css
+++ b/css/style.css
@@ -422,3 +422,20 @@ a {
         font-size: 1.6rem;
     }
 }
+
+/* Grids */
+.grid {
+    display: grid;
+}
+
+@media screen and (min-width: 768px) {
+    .grod--1x2 {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .grod--1x3 {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
