--- a/components/callout.html
+++ b/components/callout.html
@@ -3,10 +3,8 @@
         <div class="callout__content">
             <h2 class=callout__heading>Ready To Get Started?</h2>
             <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi molestiae corrupti pariatur. 
-                Totam recusandae molestiae deserunt labore ipsa pariatur, sit, ratione iure dolor at delectus 
-                deleniti facilis numquam dicta unde nostrum quidem, odit molestias. Porro molestiae necessitatibus
-                 delectus. Eaque eos natus vero eligendi officia necessitatibus aliquid earum tenetur perferendis. Quisquam?
+                Choose the hosting provider that helps you start easy, build fast,
+                 and grow strong! It’s risk-free with our 14-day money back 
             </p>
         </div>
         <a href="#" class="btn btn--secondary .btn--stretched">Get Started</a>
